ScopeResolution/newscanner/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input
    2      | encoding_decl
    3      | single_input

    4 single_input: NEWLINE
    5             | stmt

    6 file_input: star_NEWLINE_stmt ENDMARKER

    7 pick_NEWLINE_stmt: NEWLINE
    8                  | stmt

    9 star_NEWLINE_stmt: pick_NEWLINE_stmt star_NEWLINE_stmt
   10                  | %empty

   11 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT dotted_name NEWLINE

   13 opt_arglist: arglist
   14            | %empty

   15 decorators: decorator decorators
   16           | decorator

   17 decorated: decorators classdef
   18          | decorators funcdef

   19 funcdef: funcdef1 suite

   20 funcdef1: DEF NAME parameters COLON

   21 parameters: LPAR varargslist RPAR
   22           | LPAR RPAR

   23 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   24            | fpdef opt_EQUAL_test star_COMMA_fpdef

   25 opt_EQUAL_test: EQUAL test
   26               | %empty

   27 star_fpdef_COMMA: fpdef opt_EQUAL_test COMMA star_fpdef_COMMA
   28                 | %empty

   29 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   30                    | %empty

   31 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   32                     | DOUBLESTAR NAME

   33 fpdef: NAME
   34      | LPAR fplist RPAR

   35 fplist: fpdef star_fpdef_notest

   36 stmt: simple_stmt
   37     | compound_stmt

   38 simple_stmt: small_stmt small_stmt_STAR_OR_SEMI NEWLINE

   39 small_stmt: expr_stmt
   40           | print_stmt
   41           | del_stmt
   42           | pass_stmt
   43           | flow_stmt
   44           | import_stmt
   45           | global_stmt
   46           | exec_stmt
   47           | assert_stmt

   48 expr_stmt: testlist augassign pick_yield_expr_testlist
   49          | testlist star_EQUAL

   50 pick_yield_expr_testlist: yield_expr
   51                         | testlist

   52 star_EQUAL: EQUAL pick_yield_expr_testlist star_EQUAL
   53           | %empty

   54 augassign: PLUSEQUAL
   55          | MINEQUAL
   56          | STAREQUAL
   57          | SLASHEQUAL
   58          | PERCENTEQUAL
   59          | AMPEREQUAL
   60          | VBAREQUAL
   61          | CIRCUMFLEXEQUAL
   62          | LEFTSHIFTEQUAL
   63          | RIGHTSHIFTEQUAL
   64          | DOUBLESTAREQUAL
   65          | DOUBLESLASHEQUAL

   66 print_stmt: PRINT opt_test
   67           | PRINT RIGHTSHIFT test opt_test_2

   68 opt_test: test star_COMMA_test
   69         | %empty

   70 opt_test_2: plus_COMMA_test
   71           | %empty

   72 del_stmt: DEL exprlist

   73 pass_stmt: PASS

   74 flow_stmt: break_stmt
   75          | continue_stmt
   76          | return_stmt
   77          | raise_stmt
   78          | yield_stmt

   79 break_stmt: BREAK

   80 continue_stmt: CONTINUE

   81 return_stmt: RETURN testlist
   82            | RETURN

   83 yield_stmt: yield_expr

   84 raise_stmt: RAISE test opt_test_3
   85           | RAISE

   86 opt_COMMA_test: COMMA test
   87               | %empty

   88 opt_test_3: COMMA test opt_COMMA_test
   89           | %empty

   90 import_stmt: import_name
   91            | import_from

   92 import_name: IMPORT dotted_as_names

   93 import_from: FROM star_DOT dotted_name IMPORT pick_STAR_import
   94            | FROM plus_DOT IMPORT pick_STAR_import

   95 star_DOT: DOT star_DOT
   96         | %empty

   97 plus_DOT: DOT plus_DOT
   98         | DOT

   99 pick_STAR_import: STAR
  100                 | LPAR import_as_names RPAR
  101                 | import_as_names

  102 import_as_name: NAME AS NAME
  103               | NAME

  104 dotted_as_name: dotted_name AS NAME
  105               | dotted_name

  106 import_as_names: import_as_name star_COMMA_import_as_name

  107 dotted_as_names: dotted_as_name
  108                | dotted_as_names COMMA dotted_as_name

  109 dotted_name: NAME
  110            | dotted_name DOT NAME

  111 global_stmt: global_stmt COMMA NAME
  112            | GLOBAL NAME

  113 exec_stmt: EXEC expr IN test opt_COMMA_test
  114          | EXEC expr

  115 assert_stmt: ASSERT test COMMA test
  116            | ASSERT test

  117 compound_stmt: if_stmt
  118              | while_stmt
  119              | for_stmt
  120              | try_stmt
  121              | with_stmt
  122              | funcdef
  123              | decorated

  124 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  125        | IF test COLON suite star_ELIF

  126 star_ELIF: ELIF test COLON suite star_ELIF
  127          | %empty

  128 while_stmt: WHILE test COLON suite ELSE COLON suite
  129           | WHILE test COLON suite

  130 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  131         | FOR exprlist IN testlist COLON suite

  132 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  133         | TRY COLON suite FINALLY COLON suite

  134 plus_except: except_clause COLON suite plus_except
  135            | except_clause COLON suite

  136 opt_ELSE: ELSE COLON suite
  137         | %empty

  138 opt_FINALLY: FINALLY COLON suite
  139            | %empty

  140 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  141 star_COMMA_with_item: COMMA with_item star_COMMA_with_item
  142                     | %empty

  143 with_item: test AS expr
  144          | test

  145 except_clause: EXCEPT test opt_AS_COMMA
  146              | EXCEPT

  147 pick_AS_COMMA: AS
  148              | COMMA

  149 opt_AS_COMMA: pick_AS_COMMA test
  150             | %empty

  151 suite: simple_stmt

  152 $@1: %empty

  153 suite: NEWLINE INDENT $@1 plus_stmt DEDENT

  154 plus_stmt: stmt plus_stmt
  155          | stmt

  156 testlist_safe: old_test plus_COMMA_old_test
  157              | old_test

  158 old_test: or_test
  159         | old_lambdef

  160 old_lambdef: LAMBDA varargslist COLON old_test
  161            | LAMBDA COLON old_test

  162 test: or_test opt_IF_ELSE
  163     | lambdef

  164 opt_IF_ELSE: IF or_test ELSE test
  165            | %empty

  166 or_test: and_test
  167        | or_test OR and_test

  168 and_test: not_test
  169         | and_test AND not_test

  170 not_test: NOT not_test
  171         | comparison

  172 comparison: expr
  173           | comparison comp_op expr

  174 comp_op: LESS
  175        | GREATER
  176        | EQEQUAL
  177        | GREATEREQUAL
  178        | LESSEQUAL
  179        | GRLT
  180        | NOTEQUAL
  181        | IN
  182        | NOT IN
  183        | IS
  184        | IS NOT

  185 expr: xor_expr
  186     | expr BAR xor_expr

  187 xor_expr: and_expr
  188         | xor_expr CIRCUMFLEX and_expr

  189 and_expr: shift_expr
  190         | and_expr AMPERSAND shift_expr

  191 shift_expr: arith_expr
  192           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  193 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  194                          | RIGHTSHIFT

  195 arith_expr: term
  196           | arith_expr pick_PLUS_MINUS term

  197 pick_PLUS_MINUS: PLUS
  198                | MINUS

  199 term: factor
  200     | term pick_multop factor

  201 pick_multop: STAR
  202            | SLASH
  203            | PERCENT
  204            | DOUBLESLASH

  205 factor: pick_unop factor
  206       | power

  207 pick_unop: PLUS
  208          | MINUS
  209          | TILDE

  210 power: atom star_trailer DOUBLESTAR factor
  211      | atom star_trailer

  212 star_trailer: trailer star_trailer
  213             | %empty

  214 atom: LPAR opt_yield_test RPAR
  215     | LSQB opt_listmaker RSQB
  216     | LBRACE opt_dictorsetmaker RBRACE
  217     | BACKQUOTE testlist1 BACKQUOTE
  218     | NAME
  219     | FLOAT
  220     | NUMBER
  221     | plus_STRING

  222 pick_yield_expr_testlist_comp: yield_expr
  223                              | testlist_comp

  224 opt_yield_test: pick_yield_expr_testlist_comp
  225               | %empty

  226 opt_listmaker: listmaker
  227              | %empty

  228 opt_dictorsetmaker: dictorsetmaker
  229                   | %empty

  230 plus_STRING: STRING plus_STRING
  231            | STRING

  232 listmaker: test list_for
  233          | test star_COMMA_test

  234 testlist_comp: test comp_for
  235              | test star_COMMA_test

  236 lambdef: LAMBDA varargslist COLON test
  237        | LAMBDA COLON test

  238 trailer: LPAR opt_arglist RPAR
  239        | LSQB subscriptlist RSQB
  240        | DOT NAME

  241 subscriptlist: subscript star_COMMA_subscript

  242 subscript: DOT DOT DOT
  243          | test
  244          | opt_test_only COLON opt_test_only opt_sliceop

  245 opt_test_only: test
  246              | %empty

  247 opt_sliceop: sliceop
  248            | %empty

  249 sliceop: COLON test
  250        | COLON

  251 exprlist: expr star_COMMA_expr

  252 testlist: test star_COMMA_test

  253 dictorsetmaker: test COLON test pick_comp_for
  254               | test pick_for_test

  255 pick_comp_for: comp_for
  256              | star_test_COLON_test

  257 pick_for_test: comp_for
  258              | star_COMMA_test

  259 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  260         | CLASS NAME COLON suite

  261 opt_testlist: testlist
  262             | %empty

  263 arglist: argument COMMA arglist
  264        | argument COMMA
  265        | argument
  266        | listarg COMMA arglist_postlist
  267        | listarg
  268        | dictarg

  269 argument: test opt_comp_for
  270         | test EQUAL test

  271 opt_comp_for: comp_for
  272             | %empty

  273 list_iter: list_for
  274          | list_if

  275 list_for: FOR exprlist IN testlist_safe list_iter
  276         | FOR exprlist IN testlist_safe

  277 list_if: IF old_test list_iter
  278        | IF old_test

  279 comp_iter: comp_for
  280          | comp_if

  281 comp_for: FOR exprlist IN or_test comp_iter
  282         | FOR exprlist IN or_test

  283 comp_if: IF old_test comp_iter
  284        | IF old_test

  285 testlist1: test
  286          | testlist1 COMMA test

  287 encoding_decl: NAME

  288 yield_expr: YIELD testlist
  289           | YIELD

  290 star_fpdef_notest: COMMA fpdef star_fpdef_notest
  291                  | COMMA
  292                  | %empty

  293 star_COMMA_expr: COMMA expr star_COMMA_expr
  294                | COMMA
  295                | %empty

  296 star_COMMA_fpdef: COMMA fpdef opt_EQUAL_test star_COMMA_fpdef
  297                 | COMMA
  298                 | %empty

  299 star_COMMA_test: COMMA test star_COMMA_test
  300                | COMMA
  301                | %empty

  302 star_test_COLON_test: COMMA test COLON test star_test_COLON_test
  303                     | COMMA
  304                     | %empty

  305 star_COMMA_subscript: COMMA subscript star_COMMA_subscript
  306                     | COMMA
  307                     | %empty

  308 star_COMMA_import_as_name: COMMA import_as_name star_COMMA_import_as_name
  309                          | COMMA
  310                          | %empty

  311 plus_COMMA_test: COMMA test plus_COMMA_test
  312                | COMMA test COMMA
  313                | COMMA test

  314 plus_COMMA_old_test: COMMA old_test plus_COMMA_old_test
  315                    | COMMA old_test COMMA
  316                    | COMMA old_test

  317 dictarg: DOUBLESTAR test

  318 listarg: STAR test

  319 arglist_postlist: argument COMMA arglist_postlist
  320                 | dictarg
  321                 | argument

  322 small_stmt_STAR_OR_SEMI: SEMI small_stmt small_stmt_STAR_OR_SEMI
  323                        | SEMI
  324                        | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 59
AMPERSAND (259) 190
AND (260) 169
AS (261) 102 104 143 147
ASSERT (262) 115 116
AT (263) 11 12
BACKQUOTE (264) 217
BAR (265) 186
BREAK (266) 79
CIRCUMFLEX (267) 188
CIRCUMFLEXEQUAL (268) 61
CLASS (269) 259 260
COLON (270) 20 124 125 126 128 129 130 131 132 133 134 135 136 138
    140 160 161 236 237 244 249 250 253 259 260 302
COMMA (271) 27 29 86 88 108 111 115 141 148 263 264 266 286 290 291
    293 294 296 297 299 300 302 303 305 306 308 309 311 312 313 314
    315 316 319
CONTINUE (272) 80
DEDENT (273) 153
DEF (274) 20
DEL (275) 72
DOT (276) 95 97 98 110 240 242
DOUBLESLASH (277) 204
DOUBLESLASHEQUAL (278) 65
DOUBLESTAR (279) 29 32 210 317
DOUBLESTAREQUAL (280) 64
ELIF (281) 126
ELSE (282) 124 128 130 136 164
ENDMARKER (283) 6
EQEQUAL (284) 176
EQUAL (285) 25 52 270
EXCEPT (286) 145 146
EXEC (287) 113 114
FINALLY (288) 133 138
FOR (289) 130 131 275 276 281 282
FROM (290) 93 94
GLOBAL (291) 112
GREATER (292) 175
GREATEREQUAL (293) 177
GRLT (294) 179
IF (295) 124 125 164 277 278 283 284
IMPORT (296) 92 93 94
IN (297) 113 130 131 181 182 275 276 281 282
INDENT (298) 153
IS (299) 183 184
LAMBDA (300) 160 161 236 237
LBRACE (301) 216
LEFTSHIFT (302) 193
LEFTSHIFTEQUAL (303) 62
LESS (304) 174
LESSEQUAL (305) 178
LPAR (306) 11 21 22 34 100 214 238 259
LSQB (307) 215 239
MINEQUAL (308) 55
MINUS (309) 198 208
NAME (310) 20 29 31 32 33 102 103 104 109 110 111 112 218 240 259 260
    287
NEWLINE (311) 4 7 11 12 38 153
NOT (312) 170 182 184
NOTEQUAL (313) 180
NUMBER (314) 220
FLOAT (315) 219
OR (316) 167
PASS (317) 73
PERCENT (318) 203
PERCENTEQUAL (319) 58
PLUS (320) 197 207
PLUSEQUAL (321) 54
PRINT (322) 66 67
RAISE (323) 84 85
RBRACE (324) 216
RETURN (325) 81 82
RIGHTSHIFT (326) 67 194
RIGHTSHIFTEQUAL (327) 63
RPAR (328) 11 21 22 34 100 214 238 259
RSQB (329) 215 239
SEMI (330) 322 323
SLASH (331) 202
SLASHEQUAL (332) 57
STAR (333) 31 99 201 318
STAREQUAL (334) 56
STRING (335) 230 231
TILDE (336) 209
TRY (337) 132 133
VBAREQUAL (338) 60
WHILE (339) 128 129
WITH (340) 140
YIELD (341) 288 289


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
start (88)
    on left: 1 2 3, on right: 0
single_input (89)
    on left: 4 5, on right: 3
file_input (90)
    on left: 6, on right: 1
pick_NEWLINE_stmt (91)
    on left: 7 8, on right: 9
star_NEWLINE_stmt (92)
    on left: 9 10, on right: 6 9
decorator (93)
    on left: 11 12, on right: 15 16
opt_arglist (94)
    on left: 13 14, on right: 11 238
decorators (95)
    on left: 15 16, on right: 15 17 18
decorated (96)
    on left: 17 18, on right: 123
funcdef (97)
    on left: 19, on right: 18 122
funcdef1 (98)
    on left: 20, on right: 19
parameters (99)
    on left: 21 22, on right: 20
varargslist (100)
    on left: 23 24, on right: 21 160 236
opt_EQUAL_test (101)
    on left: 25 26, on right: 24 27 296
star_fpdef_COMMA (102)
    on left: 27 28, on right: 23 27
opt_DOUBLESTAR_NAME (103)
    on left: 29 30, on right: 31
pick_STAR_DOUBLESTAR (104)
    on left: 31 32, on right: 23
fpdef (105)
    on left: 33 34, on right: 24 27 35 290 296
fplist (106)
    on left: 35, on right: 34
stmt (107)
    on left: 36 37, on right: 5 8 154 155
simple_stmt (108)
    on left: 38, on right: 36 151
small_stmt (109)
    on left: 39 40 41 42 43 44 45 46 47, on right: 38 322
expr_stmt (110)
    on left: 48 49, on right: 39
pick_yield_expr_testlist (111)
    on left: 50 51, on right: 48 52
star_EQUAL (112)
    on left: 52 53, on right: 49 52
augassign (113)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65, on right: 48
print_stmt (114)
    on left: 66 67, on right: 40
opt_test (115)
    on left: 68 69, on right: 66
opt_test_2 (116)
    on left: 70 71, on right: 67
del_stmt (117)
    on left: 72, on right: 41
pass_stmt (118)
    on left: 73, on right: 42
flow_stmt (119)
    on left: 74 75 76 77 78, on right: 43
break_stmt (120)
    on left: 79, on right: 74
continue_stmt (121)
    on left: 80, on right: 75
return_stmt (122)
    on left: 81 82, on right: 76
yield_stmt (123)
    on left: 83, on right: 78
raise_stmt (124)
    on left: 84 85, on right: 77
opt_COMMA_test (125)
    on left: 86 87, on right: 88 113
opt_test_3 (126)
    on left: 88 89, on right: 84
import_stmt (127)
    on left: 90 91, on right: 44
import_name (128)
    on left: 92, on right: 90
import_from (129)
    on left: 93 94, on right: 91
star_DOT (130)
    on left: 95 96, on right: 93 95
plus_DOT (131)
    on left: 97 98, on right: 94 97
pick_STAR_import (132)
    on left: 99 100 101, on right: 93 94
import_as_name (133)
    on left: 102 103, on right: 106 308
dotted_as_name (134)
    on left: 104 105, on right: 107 108
import_as_names (135)
    on left: 106, on right: 100 101
dotted_as_names (136)
    on left: 107 108, on right: 92 108
dotted_name (137)
    on left: 109 110, on right: 11 12 93 104 105 110
global_stmt (138)
    on left: 111 112, on right: 45 111
exec_stmt (139)
    on left: 113 114, on right: 46
assert_stmt (140)
    on left: 115 116, on right: 47
compound_stmt (141)
    on left: 117 118 119 120 121 122 123, on right: 37
if_stmt (142)
    on left: 124 125, on right: 117
star_ELIF (143)
    on left: 126 127, on right: 124 125 126
while_stmt (144)
    on left: 128 129, on right: 118
for_stmt (145)
    on left: 130 131, on right: 119
try_stmt (146)
    on left: 132 133, on right: 120
plus_except (147)
    on left: 134 135, on right: 132 134
opt_ELSE (148)
    on left: 136 137, on right: 132
opt_FINALLY (149)
    on left: 138 139, on right: 132
with_stmt (150)
    on left: 140, on right: 121
star_COMMA_with_item (151)
    on left: 141 142, on right: 140 141
with_item (152)
    on left: 143 144, on right: 140 141
except_clause (153)
    on left: 145 146, on right: 134 135
pick_AS_COMMA (154)
    on left: 147 148, on right: 149
opt_AS_COMMA (155)
    on left: 149 150, on right: 145
suite (156)
    on left: 151 153, on right: 19 124 125 126 128 129 130 131 132
    133 134 135 136 138 140 259 260
$@1 (157)
    on left: 152, on right: 153
plus_stmt (158)
    on left: 154 155, on right: 153 154
testlist_safe (159)
    on left: 156 157, on right: 275 276
old_test (160)
    on left: 158 159, on right: 156 157 160 161 277 278 283 284 314
    315 316
old_lambdef (161)
    on left: 160 161, on right: 159
test (162)
    on left: 162 163, on right: 25 67 68 84 86 88 113 115 116 124 125
    126 128 129 143 144 145 149 164 232 233 234 235 236 237 243 245
    249 252 253 254 269 270 285 286 299 302 311 312 313 317 318
opt_IF_ELSE (163)
    on left: 164 165, on right: 162
or_test (164)
    on left: 166 167, on right: 158 162 164 167 281 282
and_test (165)
    on left: 168 169, on right: 166 167 169
not_test (166)
    on left: 170 171, on right: 168 169 170
comparison (167)
    on left: 172 173, on right: 171 173
comp_op (168)
    on left: 174 175 176 177 178 179 180 181 182 183 184, on right:
    173
expr (169)
    on left: 185 186, on right: 113 114 143 172 173 186 251 293
xor_expr (170)
    on left: 187 188, on right: 185 186 188
and_expr (171)
    on left: 189 190, on right: 187 188 190
shift_expr (172)
    on left: 191 192, on right: 189 190 192
pick_LEFTSHIFT_RIGHTSHIFT (173)
    on left: 193 194, on right: 192
arith_expr (174)
    on left: 195 196, on right: 191 192 196
pick_PLUS_MINUS (175)
    on left: 197 198, on right: 196
term (176)
    on left: 199 200, on right: 195 196 200
pick_multop (177)
    on left: 201 202 203 204, on right: 200
factor (178)
    on left: 205 206, on right: 199 200 205 210
pick_unop (179)
    on left: 207 208 209, on right: 205
power (180)
    on left: 210 211, on right: 206
star_trailer (181)
    on left: 212 213, on right: 210 211 212
atom (182)
    on left: 214 215 216 217 218 219 220 221, on right: 210 211
pick_yield_expr_testlist_comp (183)
    on left: 222 223, on right: 224
opt_yield_test (184)
    on left: 224 225, on right: 214
opt_listmaker (185)
    on left: 226 227, on right: 215
opt_dictorsetmaker (186)
    on left: 228 229, on right: 216
plus_STRING (187)
    on left: 230 231, on right: 221 230
listmaker (188)
    on left: 232 233, on right: 226
testlist_comp (189)
    on left: 234 235, on right: 223
lambdef (190)
    on left: 236 237, on right: 163
trailer (191)
    on left: 238 239 240, on right: 212
subscriptlist (192)
    on left: 241, on right: 239
subscript (193)
    on left: 242 243 244, on right: 241 305
opt_test_only (194)
    on left: 245 246, on right: 244
opt_sliceop (195)
    on left: 247 248, on right: 244
sliceop (196)
    on left: 249 250, on right: 247
exprlist (197)
    on left: 251, on right: 72 130 131 275 276 281 282
testlist (198)
    on left: 252, on right: 48 49 51 81 130 131 261 288
dictorsetmaker (199)
    on left: 253 254, on right: 228
pick_comp_for (200)
    on left: 255 256, on right: 253
pick_for_test (201)
    on left: 257 258, on right: 254
classdef (202)
    on left: 259 260, on right: 17
opt_testlist (203)
    on left: 261 262, on right: 259
arglist (204)
    on left: 263 264 265 266 267 268, on right: 13 263
argument (205)
    on left: 269 270, on right: 263 264 265 319 321
opt_comp_for (206)
    on left: 271 272, on right: 269
list_iter (207)
    on left: 273 274, on right: 275 277
list_for (208)
    on left: 275 276, on right: 232 273
list_if (209)
    on left: 277 278, on right: 274
comp_iter (210)
    on left: 279 280, on right: 281 283
comp_for (211)
    on left: 281 282, on right: 234 255 257 271 279
comp_if (212)
    on left: 283 284, on right: 280
testlist1 (213)
    on left: 285 286, on right: 217 286
encoding_decl (214)
    on left: 287, on right: 2
yield_expr (215)
    on left: 288 289, on right: 50 83 222
star_fpdef_notest (216)
    on left: 290 291 292, on right: 35 290
star_COMMA_expr (217)
    on left: 293 294 295, on right: 251 293
star_COMMA_fpdef (218)
    on left: 296 297 298, on right: 24 296
star_COMMA_test (219)
    on left: 299 300 301, on right: 68 233 235 252 258 299
star_test_COLON_test (220)
    on left: 302 303 304, on right: 256 302
star_COMMA_subscript (221)
    on left: 305 306 307, on right: 241 305
star_COMMA_import_as_name (222)
    on left: 308 309 310, on right: 106 308
plus_COMMA_test (223)
    on left: 311 312 313, on right: 70 311
plus_COMMA_old_test (224)
    on left: 314 315 316, on right: 156 314
dictarg (225)
    on left: 317, on right: 268 320
listarg (226)
    on left: 318, on right: 266 267
arglist_postlist (227)
    on left: 319 320 321, on right: 266 319
small_stmt_STAR_OR_SEMI (228)
    on left: 322 323 324, on right: 38 322


State 0

    0 $accept: . start $end

    ASSERT     shift, and go to state 1
    AT         shift, and go to state 2
    BACKQUOTE  shift, and go to state 3
    BREAK      shift, and go to state 4
    CONTINUE   shift, and go to state 5
    DEF        shift, and go to state 6
    DEL        shift, and go to state 7
    EXEC       shift, and go to state 8
    FOR        shift, and go to state 9
    FROM       shift, and go to state 10
    GLOBAL     shift, and go to state 11
    IF         shift, and go to state 12
    IMPORT     shift, and go to state 13
    LAMBDA     shift, and go to state 14
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 19
    NEWLINE    shift, and go to state 20
    NOT        shift, and go to state 21
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PASS       shift, and go to state 24
    PLUS       shift, and go to state 25
    PRINT      shift, and go to state 26
    RAISE      shift, and go to state 27
    RETURN     shift, and go to state 28
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30
    TRY        shift, and go to state 31
    WHILE      shift, and go to state 32
    WITH       shift, and go to state 33
    YIELD      shift, and go to state 34

    $default  reduce using rule 10 (star_NEWLINE_stmt)

    start              go to state 35
    single_input       go to state 36
    file_input         go to state 37
    pick_NEWLINE_stmt  go to state 38
    star_NEWLINE_stmt  go to state 39
    decorator          go to state 40
    decorators         go to state 41
    decorated          go to state 42
    funcdef            go to state 43
    funcdef1           go to state 44
    stmt               go to state 45
    simple_stmt        go to state 46
    small_stmt         go to state 47
    expr_stmt          go to state 48
    print_stmt         go to state 49
    del_stmt           go to state 50
    pass_stmt          go to state 51
    flow_stmt          go to state 52
    break_stmt         go to state 53
    continue_stmt      go to state 54
    return_stmt        go to state 55
    yield_stmt         go to state 56
    raise_stmt         go to state 57
    import_stmt        go to state 58
    import_name        go to state 59
    import_from        go to state 60
    global_stmt        go to state 61
    exec_stmt          go to state 62
    assert_stmt        go to state 63
    compound_stmt      go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    try_stmt           go to state 68
    with_stmt          go to state 69
    test               go to state 70
    or_test            go to state 71
    and_test           go to state 72
    not_test           go to state 73
    comparison         go to state 74
    expr               go to state 75
    xor_expr           go to state 76
    and_expr           go to state 77
    shift_expr         go to state 78
    arith_expr         go to state 79
    term               go to state 80
    factor             go to state 81
    pick_unop          go to state 82
    power              go to state 83
    atom               go to state 84
    plus_STRING        go to state 85
    lambdef            go to state 86
    testlist           go to state 87
    encoding_decl      go to state 88
    yield_expr         go to state 89


State 1

  115 assert_stmt: ASSERT . test COMMA test
  116            | ASSERT . test

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 14
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 90
    NOT        shift, and go to state 21
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 91
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 2

   11 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
   12          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 92

    dotted_name  go to state 93


State 3

  217 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 14
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 90
    NOT        shift, and go to state 21
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 94
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86
    testlist1    go to state 95


State 4

   79 break_stmt: BREAK .

    $default  reduce using rule 79 (break_stmt)


State 5

   80 continue_stmt: CONTINUE .

    $default  reduce using rule 80 (continue_stmt)


State 6

   20 funcdef1: DEF . NAME parameters COLON

    NAME  shift, and go to state 96


State 7

   72 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 90
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 97
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 98


State 8

  113 exec_stmt: EXEC . expr IN test opt_COMMA_test
  114          | EXEC . expr

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 90
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 99
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85


State 9

  130 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  131         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 3
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 90
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    expr         go to state 97
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 100


State 10

   93 import_from: FROM . star_DOT dotted_name IMPORT pick_STAR_import
   94            | FROM . plus_DOT IMPORT pick_STAR_import

    DOT  shift, and go to state 101

    $default  reduce using rule 96 (star_DOT)

    star_DOT  go to state 102
    plus_DOT  go to state 103


State 11

  112 global_stmt: GLOBAL . NAME

    NAME  shift, and go to state 104


State 12

  124 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  125        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 3
    LAMBDA     shift, and go to state 14
    LBRACE     shift, and go to state 15
    LPAR       shift, and go to state 16
    LSQB       shift, and go to state 17
    MINUS      shift, and go to state 18
    NAME       shift, and go to state 90
    NOT        shift, and go to state 21
    NUMBER     shift, and go to state 22
    FLOAT      shift, and go to state 23
    PLUS       shift, and go to state 25
    STRING     shift, and go to state 29
    TILDE      shift, and go to state 30

    test         go to state 105
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 13

   92 import_name: IMPORT . dotted_as_names
